# apa-logbook-parser

./: .readthedocs.yaml  CHANGELOG.md  README.md  README.rst  noxfile.py  pyproject.toml
.github/workflows/: pypi-on-release.yaml  pytest-on-push.yaml  release-drafter.yaml
dev_docs/: DEV-TODO.md  project_narrative.md  project_setup.md  pypi-release.md
docs/: Makefile  make.bat
docs/source/: apa_logbook_parser_cli.rst  changelog.rst  conf.py  dev-setup.md  index.md  index.rst  logbook_parser_cli.rst
requirements/: dev.txt  main.txt
scripts/: clean-pyc.sh  venv-init.sh  xml-format.py
src/apa_logbook_parser/apa_2023_02/models/: expanded.py  expanded_flat.py  raw.py  raw_flat.py
src/apa_logbook_parser/cli/: main.py  parse.py
src/logbook_parser/: logbook_parser.py  logbook_transformations.py  parse_context.py  project_uuid.py  xml_translation.py
src/logbook_parser/airports_db/: airport.py  airports.py
src/logbook_parser/apa_2023_02/models/: expanded.py  expanded_flat.py  metadata.py  pydantic_json_mixin.py  raw.py  raw_flat.py
src/logbook_parser/apa_2023_02/parser/: expand_raw.py  flatten_expanded.py  flatten_raw.py  parse_xml_logbook.py
src/logbook_parser/cli/: main.py  parse.py
src/logbook_parser/models/: aa_logbook.py  flight_row.py  logbook_model.py  raw_logbook.py  xml_element_model.py
src/logbook_parser/parsing/: context.py  flatten_logbook.py  logbook_transformations.py  parse_xml_logbook.py  raw_to_aa_logbook.py
src/logbook_parser/snippets/datetime/: complete_partial_datetime.py  parse_duration_regex.py
src/logbook_parser/snippets/file/: dicts_to_csv.py  json_mixin.py  remove_blank_lines.py
src/logbook_parser/snippets/xml/: format_xml_file.py
src/logbook_parser/util/: factored_duration.py  format_xml_file.py  parse_duration_regex.py  remove_blank_lines.py  safe_strip.py
tests/logbook_parser/: conftest.py  parse_xml_logbook_test.py  str_to_csv_out_test.py  test_minimal.py  xml_translation_test.py
tests/logbook_parser/airports_db/: airports_test.py
tests/logbook_parser/apa_2023_02/parsing/: expand_raw_test.py  flatten_expanded_test.py  flatten_raw_test.py  parse_xml_logbook_test.py
tests/logbook_parser/cli/: cli_test.py
tests/logbook_parser/parsing/: logbook_transformations_test.py  parse_xml_logbook_test.py  raw_to_aa_logbook_test.py
